# SpaceCraft

./: CMakeLists.txt  README.md
src/: main.cpp  myFragmentShaderColors.fs  myVertexShader.vs  shader.h  stb.cpp
